--- a/environment.yaml
+++ b/environment.yaml
@@ -2,45 +2,46 @@ name: epigeneticbutton
 channels:
   - conda-forge
   - bioconda
+  - r
   - defaults
 dependencies:
   # Core bioinformatics tools
-  - bedtools
-  - bowtie2
-  - cutadapt
-  - deeptools
-  - fastqc
-  - homer
-  - idr
-  - macs2
-  - meme
-  - multiqc
-  - sra-tools
-  - pigz
-  - samtools
-  - seqkit
-  - shortstack
-  - star
-  - wget
+  - bioconda::bedtools=2.29
+  - bioconda::bowtie2=2.4
+  - bioconda::cutadapt=2.10
+  - bioconda::deeptools=3.5
+  - bioconda::fastqc=0.11
+  - bioconda::homer=4.11
+  - bioconda::idr=2.0
+  - bioconda::macs2=2.2
+  - bioconda::meme=5.3
+  - bioconda::multiqc=1.11
+  - bioconda::sra-tools=2.11
+  - conda-forge::pigz=2.3
+  - bioconda::samtools=1.10
+  - bioconda::seqkit=0.13
+  - bioconda::shortstack=3.8
+  - bioconda::star=2.7
+  - conda-forge::wget=1.20
 
   # R and R packages
-  - r-base
-  - r-dplyr
-  - r-tidyr
-  - r-ggplot2
-  - r-cowplot
-  - r-rcolorbrewer
-  - bioconductor-annotationforge
-  - bioconductor-rrvgo
-  - bioconductor-topgo
-  - r-purrr
-  - bioconductor-limma
-  - bioconductor-edger
-  - r-stringr
-  - r-complexupset
+  - conda-forge::r-base=4.0
+  - conda-forge::r-dplyr=1.0
+  - conda-forge::r-tidyr=1.1
+  - conda-forge::r-ggplot2=3.3
+  - conda-forge::r-cowplot=1.1
+  - conda-forge::r-rcolorbrewer=1.1
+  - bioconda::bioconductor-annotationforge=1.32
+  - bioconda::bioconductor-rrvgo=1.5
+  - bioconda::bioconductor-topgo=2.42
+  - conda-forge::r-purrr=0.3
+  - bioconda::bioconductor-limma=3.46
+  - bioconda::bioconductor-edger=3.32
+  - conda-forge::r-stringr=1.4
+  - conda-forge::r-complexupset=1.2
 
   # Python packages
-  - python
-  - snakemake
-  - pandas
-  - pyyaml 
+  - conda-forge::python=3.8
+  - conda-forge::snakemake=6.0
+  - conda-forge::pandas=1.3
+  - conda-forge::pyyaml=6.0 
