--- a/environment.yaml
+++ b/environment.yaml
@@ -10,6 +10,8 @@ dependencies:
   - bioconda::bowtie2=2.4
   - bioconda::cutadapt=2.10
   - bioconda::deeptools=3.5
+  - bioconda::ucsc-bigwigtobedgraph=469
+  - bioconda::ucsc-bedgraphtobigwig=469
   - bioconda::fastqc=0.11
   - bioconda::homer=4.11
   - bioconda::idr=2.0
@@ -32,7 +34,7 @@ dependencies:
   - conda-forge::r-cowplot=1.1
   - conda-forge::r-rcolorbrewer=1.1
   - bioconda::bioconductor-annotationforge=1.32
-  - bioconda::bioconductor-rrvgo=1.5
+  - bioconda::bioconductor-rrvgo
   - bioconda::bioconductor-topgo=2.42
   - conda-forge::r-purrr=0.3
   - bioconda::bioconductor-limma=3.46
@@ -42,6 +44,6 @@ dependencies:
 
   # Python packages
   - conda-forge::python=3.8
-  - conda-forge::snakemake=6.0
+  - conda-forge::snakemake
   - conda-forge::pandas=1.3
   - conda-forge::pyyaml=6.0 
