--- a/environment.yaml
+++ b/environment.yaml
@@ -44,6 +44,6 @@ dependencies:
 
   # Python packages
   - conda-forge::python=3.8
-  - conda-forge::snakemake
+  - bioconda::snakemake=7.32.4
   - conda-forge::pandas=1.3
   - conda-forge::pyyaml=6.0 
