--- a/environment.yaml
+++ b/environment.yaml
@@ -2,48 +2,53 @@ name: epigeneticbutton
 channels:
   - conda-forge
   - bioconda
-  - r
   - defaults
 dependencies:
-  # Core bioinformatics tools
-  - bioconda::bedtools=2.29
-  - bioconda::bowtie2=2.4
-  - bioconda::cutadapt=2.10
-  - bioconda::deeptools=3.5
-  - bioconda::ucsc-bigwigtobedgraph=469
-  - bioconda::ucsc-bedgraphtobigwig=469
-  - bioconda::fastqc=0.11
-  - bioconda::homer=4.11
-  - bioconda::idr=2.0
-  - bioconda::macs2=2.2
-  - bioconda::meme=5.3
-  - bioconda::multiqc=1.11
-  - bioconda::sra-tools=2.11
-  - conda-forge::pigz=2.3
-  - bioconda::samtools=1.10
-  - bioconda::seqkit=0.13
-  - bioconda::shortstack=3.8
-  - bioconda::star=2.7
-  - conda-forge::wget=1.20
+  # Python packages (from conda-forge)
+  - python=3.8  # Critical for compatibility
+  - snakemake>=7.0  # Minimum version for features we need
+  - pandas>=1.3
+  - pyyaml>=6.0
 
-  # R and R packages
-  - conda-forge::r-base=4.0
-  - conda-forge::r-dplyr=1.0
-  - conda-forge::r-tidyr=1.1
-  - conda-forge::r-ggplot2=3.3
-  - conda-forge::r-cowplot=1.1
-  - conda-forge::r-rcolorbrewer=1.1
-  - bioconda::bioconductor-annotationforge=1.32
-  - bioconda::bioconductor-rrvgo
-  - bioconda::bioconductor-topgo=2.42
-  - conda-forge::r-purrr=0.3
-  - bioconda::bioconductor-limma=3.46
-  - bioconda::bioconductor-edger=3.32
-  - conda-forge::r-stringr=1.4
-  - conda-forge::r-complexupset=1.2
+  # Core bioinformatics tools (from bioconda)
+  - bedtools>=2.29
+  - bowtie2>=2.4
+  - cutadapt>=2.10
+  - deeptools>=3.5
+  - fastqc>=0.11
+  - homer>=4.11
+  - idr>=2.0
+  - macs2>=2.2
+  - meme>=5.3
+  - multiqc>=1.11
+  - sra-tools>=2.11
+  - samtools>=1.10
+  - seqkit>=0.13
+  - shortstack>=3.8
+  - star>=2.7
 
-  # Python packages
-  - conda-forge::python=3.8
-  - bioconda::snakemake=7.32.4
-  - conda-forge::pandas=1.3
-  - conda-forge::pyyaml=6.0 
+  # UCSC tools (from bioconda)
+  - ucsc-bigwigtobedgraph
+  - ucsc-bedgraphtobigwig
+
+  # Utilities (from conda-forge)
+  - pigz>=2.3
+  - wget>=1.20
+
+  # R and R packages (from conda-forge)
+  - r-base=4.0  # Critical for R package compatibility
+  - r-dplyr>=1.0
+  - r-tidyr>=1.1
+  - r-ggplot2>=3.3
+  - r-cowplot>=1.1
+  - r-rcolorbrewer>=1.1
+  - r-purrr>=0.3
+  - r-stringr>=1.4
+  - r-complexupset>=1.2
+
+  # Bioconductor packages (from bioconda)
+  - bioconductor-annotationforge>=1.32
+  - bioconductor-rrvgo
+  - bioconductor-topgo>=2.42
+  - bioconductor-limma>=3.46
+  - bioconductor-edger>=3.32 
