--- a/environment.yaml
+++ b/environment.yaml
@@ -4,16 +4,31 @@ channels:
   - bioconda
   - defaults
 dependencies:
+  - python=3.8
+  - pigz=2.6
+  - samtools=1.11
+  - bowtie2=2.4.2
+  - star=2.7.10b
+  - bismark=0.23.0
+  - bedtools=2.29.2
+  - fastqc=0.11.9
+  - cutadapt=3.4
+  - deeptools=3.5.1
+  - ucsc-bedgraphtobigwig=377
+  - ucsc-bedsort=377
+  - sra-tools=2.10.9
+  - macs2=2.2.7.1
+  - idr=2.0.4.2
+  - homer=4.11.1
+  - ucsc-bigwigtobedgraph=377
+  - shortstack=3.8.5
+
   # Python packages (from conda-forge)
-  - python=3.8  # Critical for compatibility
   - snakemake>=7.0  # Minimum version for features we need
   - pandas>=1.3
   - pyyaml>=6.0
 
   # Core bioinformatics tools (from bioconda)
-  - bedtools>=2.29
-  - bowtie2>=2.4
-  - cutadapt>=2.10
   - deeptools>=3.5
   - fastqc>=0.11
   - homer>=4.11
@@ -32,7 +47,6 @@ dependencies:
   - ucsc-bedgraphtobigwig
 
   # Utilities (from conda-forge)
-  - pigz>=2.3
   - wget>=1.20
 
   # R and R packages (from conda-forge)
