--- a/envs/mC_analysis.yaml
+++ b/envs/mC_analysis.yaml
@@ -1,1 +1,8 @@
- 
+name: bedtools-env
+channels:
+  - bioconda
+  - conda-forge
+  - defaults
+dependencies:
+  - bedtools=2.30.0
+  - ucsc-bedgraphtobigwig 
