--- a/config.yaml
+++ b/config.yaml
@@ -38,6 +38,9 @@ chip_mapping:
     map_se: "--end-to-end "
     filter: "-b -h -F 256"
 
+# For Arabidopsis, use 12; For maize, the default of 14 is best
+star_index: --genomeSAindexNbases 12
+
 # RNA parameters
 rna_tracks:
   RNAseq:
