--- a/config.yaml
+++ b/config.yaml
@@ -56,7 +56,7 @@ chip_callpeaks:
     'H3|H4': "broad"
   params: "--keep-dup 'all' --nomodel"
   # For Arabidopsis, use 1.3e8; For maize, 2.2e9
-  genomesize: "--1.3.e8"
+  genomesize: "1.3.e8"
   
 # For Arabidopsis, use 12; For maize, 14 (bowtie2 default) is best
 star_index: "--genomeSAindexNbases 12"
