--- a/config.yaml
+++ b/config.yaml
@@ -47,6 +47,8 @@ chip_tracks:
 # Output options: "all": returns all QC, stats, plots and files (i.e fastqc, fingerprints, idr, stats table and plots); "none" if you don't want the fastqc; other options can be added.
 # QC_option: "all"
 QC_option: "none"
+# Keep all intermediary logs for debugging. Set to False for cleaner runs
+debug_keep_logs: true
 
 # For peaks
 chip_callpeaks:
