--- a/config.yaml
+++ b/config.yaml
@@ -69,7 +69,6 @@ chip_callpeaks:
     'H3|H4': "broad"
   params: "--keep-dup 'all' --nomodel"
  
-
 # RNA parameters
 rna_tracks:
   RNAseq:
@@ -89,7 +88,59 @@ analysis:
 
 # Resource allocation
 resources:
-  threads: 8
-  memory: "16G"
-  tmp_space: "10G"
-  
+  use_pigz:
+    threads: 16
+    mem: 2
+    tmp: 2
+  bedtools:
+    threads: 16
+    mem: 2
+    tmp: 2
+  chrom_sizes:
+    threads: 16
+    mem: 8
+    tmp: 16
+  fastq_dump:
+    threads: 8
+    mem: 2
+    tmp: 16
+  cutadapt:
+    threads: 8
+    mem: 2
+    tmp: 16
+  bt2_indices:
+    threads: 8
+    mem: 4
+    tmp: 16
+  bt2_map:
+    threads: 8
+    mem: 8
+    tmp: 16
+  samtools_chip:
+    threads: 8
+    mem: 8
+    tmp: 16
+  STAR_indices:
+    threads: 8
+    mem: 4
+    tmp: 16
+  STAR_map:
+    threads: 8
+    mem: 8
+    tmp: 16
+  samtools_rna:
+    threads: 8
+    mem: 8
+    tmp: 16
+  deeptools_bw:
+    threads: 8
+    mem: 8
+    tmp: 4
+  macs2:
+    threads: 8
+    mem: 8
+    tmp: 4
+  idr:
+    threads: 1
+    mem: 8
+    tmp: 4
