--- a/envs/mc.yaml
+++ b/envs/mc.yaml
@@ -7,4 +7,7 @@ dependencies:
   - python=3.8
   - bismark=0.23.0
   - bowtie2=2.4.2
-  - ucsc-bedgraphtobigwig=377 
+  - ucsc-bedgraphtobigwig=377
+  - r-base=4.2.3
+  - r-dplyr
+  - r-DMRcaller
