--- a/envs/mc.yaml
+++ b/envs/mc.yaml
@@ -8,6 +8,6 @@ dependencies:
   - bismark=0.23.0
   - bowtie2=2.4.2
   - ucsc-bedgraphtobigwig=377
-  - r-base=4.2.3
+  - r-base
   - r-dplyr
   - bioconductor-dmrcaller
