--- a/envs/mc.yaml
+++ b/envs/mc.yaml
@@ -5,6 +5,8 @@ channels:
 dependencies:
   - python=3.8
   - bismark=0.23.0
+  - samtools=1.17
+  - openssl=1.0
   - bowtie2=2.4.2
   - ucsc-bedgraphtobigwig=377
   - r-base
