--- a/envs/mc.yaml
+++ b/envs/mc.yaml
@@ -4,11 +4,7 @@ channels:
   - defaults
 dependencies:
   - python=3.8
-  - bismark=0.23.0
-  - samtools
-  - openssl=1.0
-  - bowtie2=2.4.2
+  - bismark>=0.24.2
+  - bowtie2>=2.4
+  - samtools>=1.10
   - ucsc-bedgraphtobigwig=377
-  - r-base
-  - r-dplyr
-  - bioconductor-dmrcaller
