--- a/config.yaml
+++ b/config.yaml
@@ -80,7 +80,7 @@ rna_tracks:
 
 # WGBS parameters
 mC_method: "WGBS" # default works for WGBS, replace with Pico or EMSeq when appropriate
-mC_context: "All" # another option should be set for CG-only (changes parameters for methylation extraction step)
+mC_context: "all" # another option should be set for CG-only (changes parameters for methylation extraction step)
 
 # If using the Pico or EMseq kit for DNA methylation, trimming parameters should be changed "-u 10 -q 10 -m 20" for SE and "-u 10 -U 10 -q 10 -m 20" ## Can be added as an option based on "sample" name and PE
 mC_mapping:
