--- a/config.yaml
+++ b/config.yaml
@@ -73,11 +73,15 @@ chip_callpeaks:
 # RNA parameters
 rna_tracks:
   RNAseq:
+    fileorder: "rnaseq"
     param_bg: "--outWigType bedGraph"
     strandedness: "reverse"
+    multimap: "multiple" # change to 'unique' if you only want uniquely mapped reads
   RAMPAGE:
+    fileorder: "rampage"
     param_bg: "--outWigType bedGraph read1_5p"
     strandedness: "forward"
+    multimap: "multiple" # change to 'unique' if you only want uniquely mapped reads
 
 # WGBS parameters
 mC_method: "WGBS" # default works for WGBS, replace with Pico or EMSeq when appropriate
