--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 # Path to the working directory where the repository was cloned
-repo_folder: "/grid/martienssen/home/jcahn/nlsas/projects/testmC"
+repo_folder: "/grid/martienssen/home/jcahn/nlsas/projects/epibutton"
 repo_folder_rule: "path/to/epigeneticbutton/repo"
 
 # Name of the run
@@ -20,7 +20,7 @@ ref_path_rule: "path/to/reference/genomes"
 trimming_quality: "-q 10 -m 20"
 
 # Species-dependent parameters:
-species: "maize"
+species: "arabidopsis"
 
 arabidopsis:
   star_index: "--genomeSAindexNbases 12"
@@ -160,4 +160,5 @@ resources:
   mc_bigwig: *single
   merging_mc_replicates: *heavy
   call_dmrs: *heavy
+  merging_rna_replicates: *heavy
 
