--- a/envs/reference.yaml
+++ b/envs/reference.yaml
@@ -3,7 +3,7 @@ channels:
   - bioconda
   - defaults
 dependencies:
-  - python=3.8
-  - pigz>=2.3
-  - samtools=1.11
-  - bedtools=2.29.2
+  - python>=3 #=3.8
+  - pigz #>=2.3
+  - samtools #=1.11
+  - bedtools #=2.29.2
