--- a/envs/chip.yaml
+++ b/envs/chip.yaml
@@ -3,11 +3,11 @@ channels:
   - bioconda
   - defaults
 dependencies:
-  - python=3.8
-  - pyyaml>=5.1
-  - bowtie2>=2.4
-  - samtools>=1.10
-  - bedtools>=2.29
-  - deeptools=3.5.1
-  - macs2=2.2.7.1
-  - idr=2.0.4.2
+  - python>=3 #3.8
+  - pyyaml #>=5.1
+  - bowtie2 #>=2.4
+  - samtools #>=1.10
+  - bedtools #>=2.29
+  - deeptools #=3.5.1
+  - macs2 #=2.2.7.1
+  - idr #=2.0.4.2
