--- a/envs/download.yaml
+++ b/envs/download.yaml
@@ -3,8 +3,8 @@ channels:
   - bioconda
   - defaults
 dependencies:
-  - python=3.8
-  - cutadapt=3.4
-  - sra-tools=2.10.9
-  - pigz=2.6
-  - fastqc=0.11.9
+  - python>=3 #=3.8
+  - cutadapt #=3.4
+  - sra-tools #=2.10.9
+  - pigz #>=2.3
+  - fastqc #=0.11.9
