--- a/envs/mc.yaml
+++ b/envs/mc.yaml
@@ -3,10 +3,10 @@ channels:
   - bioconda
   - defaults
 dependencies:
-  - python=3.8
-  - bismark>=0.24.2
-  - bowtie2>=2.4
-  - samtools>=1.10
-  - bedtools>=2.29
-  - ucsc-bedgraphtobigwig=377
-  - pigz>=2.3
+  - python>=3 #=3.8
+  - bismark #>=0.24.2
+  - bowtie2 #>=2.4
+  - samtools #>=1.10
+  - bedtools #>=2.29
+  - ucsc-bedgraphtobigwig #=377
+  - pigz #>=2.3
