--- a/envs/epibutton.yaml
+++ b/envs/epibutton.yaml
@@ -30,5 +30,9 @@ dependencies:
   - r-cowplot
   - r-rcolorbrewer
   - bioconductor-dmrcaller
+  - bioconductor-limma
+  - bioconductor-edger
+  - r-stringr
+  - r-gplots
 
 
