--- a/config.yaml
+++ b/config.yaml
@@ -122,7 +122,7 @@ mC_mapping:
     process_se: "--buffer_size 16G" # change buffer size if not appropriate for setup
 
 # small RNA parameters
-structural_rna_depletion: true # to filter structural RNA (rRNAs, tRNAs, snoRNAs) before mapping. Recommended when studying microRNAs and small interfering RNAs. Build a database of such structural RNAs based on Zea mays.
+structural_rna_depletion: false # to filter structural RNA (rRNAs, tRNAs, snoRNAs) before mapping. Recommended when studying microRNAs and small interfering RNAs. Build a database of such structural RNAs based on Zea mays.
 structural_rna_fafile: "data/zm.structural_RNAs.fa.gz" # defaul to structural RNAs from Zea mays dowloaded through Rfam (see corresponding Help) 
 srna_mapping_params: "--mmap u --dicermin 20 --dicermax 24 --bowtie_m all --mismatches 1 --foldsize 1000 --pad 250"
 
@@ -146,13 +146,13 @@ standard_resources: &standard
 
 heavy_resources: &heavy
   threads: 16
-  mem: 8000
-  tmp: 16000
+  mem: 6000
+  tmp: 32000
 
 single_thread: &single
   threads: 1
-  mem: 8000
-  tmp: 16000
+  mem: 16000
+  tmp: 32000
   
 resources:
   use_pigz: *standard
