--- a/config.yaml
+++ b/config.yaml
@@ -139,6 +139,16 @@ analysis:
   perform_te_analysis: false   # Whether to perform TE analysis (takes long time)
 
 # Resource allocation
+minimal_resources: &default
+  threads: 1
+  mem: 32
+  tmp: 32
+
+low_resources: &low
+  threads: 1
+  mem: 1000
+  tmp: 1000
+
 standard_resources: &standard
   threads: 4
   mem: 2000
@@ -155,33 +165,60 @@ single_thread: &single
   tmp: 32000
   
 resources:
-  use_pigz: *standard
-  chrom_sizes: *single
-  region_file: *standard
-  fastq_dump: *heavy
-  process_fastq: *heavy
-  fastqc: *single
-  bt2_indices: *heavy
-  bt2_map: *heavy
-  filter_chip: *heavy
+  prepare_reference: *default
+  setup_directories: *default
+  check_fasta: *standard
+  check_gff: *standard
+  check_gtf: *standard
+  check_chrom_sizes: *single
+  prep_region_file: *low
+  get_fastq_pe: *heavy
+  get_fastq_se: *heavy
+  run_fastqc: *single
+  process_fastq_pe: *heavy
+  process_fastq_se: *heavy
+  make_bt2_indices: *heavy
+  bowtie2_map_pe: *heavy
+  bowtie2_map_se: *heavy
+  filter_chip_pe: *heavy
+  filter_chip_se: *heavy
+  make_chip_stats_pe: *low
+  make_chip_stats_se: *low
+  pe_or_se_chip_dispatch: *default
   make_coverage_chip: *heavy 
   make_bigwig_chip: *heavy
   make_fingerprint_plot: *heavy
-  macs2: *heavy
-  idr: *single
+  calling_peaks_macs2_pe: *heavy
+  calling_peaks_macs2_se: *heavy
+  idr_analysis_replicates: *single
   merging_chip_replicates: *heavy
   making_pseudo_replicates: *heavy
-  best_peaks_pseudoreps: *standard
-  STAR_indices: *heavy
-  STAR_map: *heavy
-  filter_rna: *heavy
-  bismark_indices: *heavy
-  bismark_map: *heavy
-  mc_bigwig: *single
+  best_peaks_pseudoreps: *low
+  make_peak_stats: *low
+  all_chip: *default
+  make_bismark_indices: *heavy
+  bismark_map_pe: *heavy
+  bismark_map_se: *heavy
+  pe_or_se_mc_dispatch: *default
+  make_mc_stats_pe: *low
+  make_mc_stats_se: *low
   merging_mc_replicates: *heavy
-  call_dmrs: *single # while technically it could be parallelized, if small scaffolds are present and do not report any DMRs, DMRcaller will crash.
+  make_mc_bigwig_files: *single
+  call_DMRs_pairwise: *single # while technically it could be parallelized, if small scaffolds are present and do not report any DMRs, DMRcaller will crash.
+  all_mc: *default
+  make_STAR_indices: *heavy
+  STAR_map_pe: *heavy
+  STAR_map_se: *heavy
+  filter_rna_pe: *heavy
+  filter_rna_se: *heavy
+  make_rna_stats_pe: *low
+  make_rna_stats_se: *low
+  pe_or_se_rna_dispatch: *default
   merging_rna_replicates: *heavy
-  rna_degs: *single
+  make_rna_stranded_bigwigs: *heavy
+  prep_files_for_DEGs: *single
+  call_all_DEGs: *single
+  gather_gene_expression_rpkm: *single
+  plot_expression_levels: *single
+  all_rna: *default
   shortstack_map: *heavy
-  plot_expression: *single
-
